# htms

./: .gitignore  DOCUMENTATION-COMPLETE.md  PUBLISHING.md  README.md  bump-version.sh
.github/workflows/: publish.yml
docs/: AI-AGENT-GUIDE.md  README.md  index.md  package.json
docs/api/: generated-code.md
docs/examples/: instagram-clone.md  todo-app.md
docs/guide/: build-deploy.md  component-patterns.md  getting-started.md  language-reference.md
htms-cli/: package.json  tsconfig.json
htms-cli/src/: compiler.js  index.js  vite-plugin.js
htms-cli/test/: error.htms  test.htms
htms-cli/test/output/: events.ts  router.ts
htms-compiler/: Cargo.toml  HLD.md  LICENSE  PUBLISHING.md  README.md  build-wasm.sh  package.json  tsconfig.json
htms-compiler/.github/workflows/: release.yml
htms-compiler/cli/: README.md  package.json  tsconfig.json
htms-compiler/cli/src/: compiler.js  format-errors.js  watch.js
htms-compiler/cli/test/output/: templates.ts
htms-compiler/src/: ast.rs  error.rs  lib.rs
htms-compiler/src/analyzer/: mod.rs  resolver.rs  symbols.rs
htms-compiler/src/codegen/: events.rs  html.rs  mod.rs  router.rs  templates.rs  utils.rs
htms-compiler/src/lexer/: mod.rs  scanner.rs  tokens.rs
htms-compiler/src/parser/: grammar.rs  mod.rs
htms-compiler/tests/: integration_test.rs  lexer_test.rs
htms-vscode/: README.md  language-configuration.json  package.json  test.htms  tsconfig.json
htms-vscode/snippets/: htms.json
htms-vscode/src/: extension.ts  server.ts
htms-vscode/syntaxes/: htms.tmLanguage.json
